<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_account">Add Account</string>
    <string name="action_add">Go to install</string>
    <string name="action_app_hide">Hide App</string>
    <string name="action_app_show">Show App</string>
    <string name="action_auto_fix">Repair App</string>
    <string name="action_clean">Clear Data</string>
    <string name="action_clear_cache">Clear Cache</string>
    <string name="action_clear_storage">Clear Data</string>
    <string name="action_clone_next">Batch Clone</string>
    <string name="action_create_shortcut">Create Shortcut</string>
    <string name="action_force_stop">Force Stop</string>
    <string name="action_icon_fake">Icon Fake</string>
    <string name="action_note">Note</string>
    <string name="action_qrcode_history">History</string>
    <string name="action_qrcode_scan">QRCode Scan</string>
    <string name="action_reset">Reset</string>
    <string name="action_reset_only">Just Reset</string>
    <string name="action_search">Search</string>
    <string name="action_switch_clone">Clone Mode</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_list_permission_hint">" &lt;b>Permission Required&lt;/b>&lt;br/>&lt;br/> To ensure the app works properly, please enable the &lt;b>Access installed apps list&lt;/b> permission.&lt;br/>&lt;br/> &lt;b>How to enable:&lt;/b>&lt;br/> 1. Go to: Settings → App Management → Permission Management&lt;br/> 2. Find and tap: This app&lt;br/> 3. Enable: Read all apps or Access installed apps list&lt;br/>&lt;br/> Once enabled, all features will be available. "</string>
    <string name="app_name">Clone Master</string>
    <string name="app_retry">Retry</string>
    <string name="app_secure_env_content">According to Google policy, limit loading in on-device Android containers</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apps_change_from_host">System icon</string>
    <string name="apps_change_from_photo">Album icon</string>
    <string name="apps_change_icon_source">Select icon source</string>
    <string name="apps_change_reset">Reset</string>
    <string name="apps_install_from_file">Import from file</string>
    <string name="apps_tag_hint">tag</string>
    <string name="banner_coin_prefix">"Coin: "</string>
    <string name="banner_gowatch">Watch ads</string>
    <string name="banner_vip_expire_time_tag">Expired Time:</string>
    <string name="banner_vip_expired_status">Expired</string>
    <string name="banner_vip_guide">"Watch ads to earn coins and unlock VIP features for free, available for a limited time. Tap 'Watch ads' to get started."</string>
    <string name="banner_vip_item_1">%1$d coins redeem %2$d days VIP</string>
    <string name="banner_vip_redeem">Redeem</string>
    <string name="banner_vip_redeem_less">Dear user, please watch ads to enjoy the Free VIP access.</string>
    <string name="banner_vip_reward">Continue to watch ads, you will get more coins</string>
    <string name="banner_vip_time_limit">Dear user, your VIP duration has exceeded limit.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="copy">Copy</string>
    <string name="device_dialog_content_reset">Are you sure you want to reset the device ID and clear the storage?</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_network">network error</string>
    <string name="error_network_timeout">request timeout</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="feedback_email_body">"Here are some issues I've encountered:

"</string>
    <string name="feedback_email_subject">CM Feedback - %s</string>
    <string name="feedback_toast_no_email_app">Email app not found</string>
    <string name="hide_hidden_apps">"Don't show hidden apps"</string>
    <string name="hint_battery_optimise">Allow the app to run in the background for more stability</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="mtrl_checkbox_button_icon_path_checked">M14,18.2 11.4,15.6 10,17 14,21 22,13 20.6,11.6z</string>
    <string name="mtrl_checkbox_button_icon_path_group_name">icon</string>
    <string name="mtrl_checkbox_button_icon_path_indeterminate">M13.4,15 11,15 11,17 13.4,17 21,17 21,15z</string>
    <string name="mtrl_checkbox_button_icon_path_name">icon path</string>
    <string name="mtrl_checkbox_button_path_checked">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z</string>
    <string name="mtrl_checkbox_button_path_group_name">button</string>
    <string name="mtrl_checkbox_button_path_name">button path</string>
    <string name="mtrl_checkbox_button_path_unchecked">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z M23,23H9V9h14V23z</string>
    <string name="mtrl_checkbox_state_description_checked">Checked</string>
    <string name="mtrl_checkbox_state_description_indeterminate">Partially checked</string>
    <string name="mtrl_checkbox_state_description_unchecked">Not checked</string>
    <string name="native_body">Body</string>
    <string name="native_headline">Headline</string>
    <string name="native_media_view">Media View</string>
    <string name="negative">Cancel</string>
    <string name="not_set">Not set</string>
    <string name="notifications_permission_confirm">Allow</string>
    <string name="notifications_permission_decline">"Don't allow"</string>
    <string name="notifications_permission_title">Allow app to send you notifications?</string>
    <string name="offline_dialog_image_description">Icon</string>
    <string name="offline_dialog_text">"Thanks for your interest.
We will share more once you're back online."</string>
    <string name="offline_notification_title">"You are back online! Let's pick up where we left off"</string>
    <string name="offline_notification_title_with_advertiser">You are back online! Continue learning about %s</string>
    <string name="offline_opt_in_confirm">OK</string>
    <string name="offline_opt_in_decline">No thanks</string>
    <string name="offline_opt_in_message">"We'll send you a notification with a link to the advertiser site."</string>
    <string name="offline_opt_in_title">"Open ad when you're back online."</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="positive">Confirm</string>
    <string name="rate_dialog_cancel">No, Thanks</string>
    <string name="rate_dialog_submit_rating">Submit Rating</string>
    <string name="rate_dialog_subtitle_positive">Your great review is our biggest motivation!</string>
    <string name="rate_dialog_title">Enjoying Our App?</string>
    <string name="sandbox_app_manager_clear_cache">Clear cache</string>
    <string name="sandbox_app_manager_empty">No sandbox apps</string>
    <string name="sandbox_app_manager_title">Manage apps</string>
    <string name="show_hidden_apps">Show hidden apps</string>
    <string name="title_about">About</string>
    <string name="title_connect">Connect us</string>
    <string name="title_remove_ads">Close Ads</string>
</resources>