<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/app_shortcut_custom_0" android:paddingTop="0.0dp" android:paddingBottom="16.0dp" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceListItem" android:textColor="?colorPrimary" android:id="@id/negative" android:padding="16.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/negative" android:layout_alignParentStart="true" />
        <TextView android:textAppearance="?android:textAppearanceListItem" android:textColor="?colorPrimary" android:id="@id/reset" android:padding="16.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/apps_change_reset" android:layout_alignParentTop="true" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <ImageView android:layout_gravity="center_horizontal" android:id="@id/icon" android:layout_width="36.0dp" android:layout_height="36.0dp" android:layout_marginStart="32.0dp" android:layout_marginEnd="32.0dp" />
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceListItem" android:textColor="?colorPrimary" android:paddingTop="8.0dp" android:paddingBottom="8.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/apps_change_icon_source" android:paddingStart="32.0dp" android:paddingEnd="32.0dp" />
        <TextView android:textAppearance="?android:textAppearanceListItem" android:id="@id/system" android:background="?android:selectableItemBackground" android:paddingTop="16.0dp" android:paddingBottom="16.0dp" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/apps_change_from_host" android:paddingStart="32.0dp" android:paddingEnd="32.0dp" />
        <TextView android:textAppearance="?android:textAppearanceListItem" android:id="@id/photo" android:background="?android:selectableItemBackground" android:paddingTop="16.0dp" android:paddingBottom="16.0dp" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/apps_change_from_photo" android:paddingStart="32.0dp" android:paddingEnd="32.0dp" />
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout android:layout_gravity="center_horizontal" android:id="@id/input" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:hint="@string/apps_tag_hint" android:layout_marginStart="32.0dp" android:layout_marginEnd="32.0dp" app:endIconMode="clear_text" app:errorEnabled="true" app:placeholderText="" style="?textInputOutlinedStyle">
        <com.google.android.material.textfield.TextInputEditText android:tag="binding_1" android:layout_width="match_parent" android:layout_height="wrap_content" android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button android:id="@id/positive" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dp" android:layout_marginBottom="32.0dp" android:text="@string/positive" android:layout_alignParentBottom="true" android:layout_marginStart="32.0dp" android:layout_marginEnd="32.0dp" />
</LinearLayout>
