<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_dialog_rate" android:padding="16.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dp" android:layout_marginRight="24.0dp" android:layout_marginHorizontal="24.0dp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@android:color/black" android:layout_gravity="center_horizontal" android:id="@id/tv_rate_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rate_dialog_title" />
    <TextView android:textSize="14.0sp" android:textColor="@android:color/darker_gray" android:layout_gravity="center_horizontal" android:id="@id/tv_rate_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:text="@string/rate_dialog_subtitle_positive" />
    <RatingBar android:theme="@style/RatingBar" android:layout_gravity="center_horizontal" android:id="@id/rating_bar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:numStars="5" android:rating="5.0" android:stepSize="1.0" android:isIndicator="false" android:progressTint="#ffc107" android:progressBackgroundTint="#bdbdbd" android:secondaryProgressTint="#ffc107" style="?android:ratingBarStyleIndicator" />
    <Button android:textSize="16.0sp" android:textColor="@android:color/white" android:id="@id/btn_submit_rating" android:layout_width="match_parent" android:layout_height="50.0dp" android:layout_marginLeft="8.0dp" android:layout_marginTop="16.0dp" android:layout_marginRight="8.0dp" android:text="@string/rate_dialog_submit_rating" android:layout_marginHorizontal="8.0dp" app:backgroundTint="#ff4caf50" style="@style/Widget.Material3.Button.TextButton" />
    <TextView android:textSize="12.0sp" android:textColor="@android:color/darker_gray" android:layout_gravity="center_horizontal" android:id="@id/tv_cancel" android:padding="8.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dp" android:text="@string/rate_dialog_cancel" />
</LinearLayout>
