<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:background="?android:colorBackground" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.recyclerview.widget.RecyclerView android:id="@id/recycler_view" android:paddingTop="4.0dp" android:paddingBottom="16.0dp" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="16.0dp" android:paddingEnd="16.0dp" />
    <TextView android:textAppearance="?android:textAppearanceListItem" android:textColor="?android:textColorSecondary" android:layout_gravity="center" android:id="@id/empty_state" android:padding="24.0dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sandbox_app_manager_empty" android:textAlignment="center" />
    <ProgressBar android:layout_gravity="center" android:id="@id/loading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" style="?android:progressBarStyle" />
    <androidx.cardview.widget.CardView android:layout_gravity="bottom" android:id="@id/bottom_actions" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" app:cardBackgroundColor="?android:colorBackground" app:cardCornerRadius="0.0dp" app:cardElevation="8.0dp">
        <LinearLayout android:orientation="vertical" android:paddingTop="10.0dp" android:paddingBottom="10.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceListItemSmall" android:textColor="?android:textColorSecondary" android:id="@id/selected_count" android:paddingBottom="4.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:alpha="0.7" android:paddingStart="20.0dp" android:paddingEnd="20.0dp" />
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:baselineAligned="false">
                <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <ImageButton android:id="@id/clear_cache" android:background="?selectableItemBackground" android:padding="12.0dp" android:layout_width="48.0dp" android:layout_height="48.0dp" android:src="@drawable/action_app_clean" android:contentDescription="@string/sandbox_app_manager_clear_cache" app:tint="?android:textColorSecondary" />
                    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorSecondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sandbox_app_manager_clear_cache" />
                </LinearLayout>
                <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <ImageButton android:id="@id/clear_data" android:background="?selectableItemBackground" android:padding="12.0dp" android:layout_width="48.0dp" android:layout_height="48.0dp" android:src="@drawable/ic_sandbox_storage_24" android:contentDescription="@string/action_clear_storage" app:tint="?android:textColorSecondary" />
                    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorSecondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_clear_storage" />
                </LinearLayout>
                <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <ImageButton android:id="@id/uninstall" android:background="?selectableItemBackground" android:padding="12.0dp" android:layout_width="48.0dp" android:layout_height="48.0dp" android:src="@drawable/action_uninstall" android:contentDescription="@string/action_uninstall" app:tint="?android:textColorSecondary" />
                    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorSecondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_uninstall" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
